[tool.poetry]
name = "reimbursement-manager"
version = "0.1.0"
description = "Personal project to manage my reimbursement requests"
authors = ["Victor Mattos <5757883+vicmattos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vicmattos/reimbursement-manager"
repository = "https://github.com/vicmattos/reimbursement-manager"
keywords = ["reimbursement"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reimbursement-manager = "reimbursement_manager.console:main"