[tool.poetry]
name = "reimbursement-manager"
version = "0.1.0"
description = "Personal project to manage my reimbursement requests"
authors = ["Victor Mattos <5757883+vicmattos@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vicmattos/reimbursement-manager"
repository = "https://github.com/vicmattos/reimbursement-manager"
keywords = ["reimbursement"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
reimbursement-manager = "reimbursement_manager.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["reimbursement_manager"]

[tool.coverage.report]
show_missing = true
fail_under = 98

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
